--- a/cafe-sync/src/fran/pages/complain/styles/Complain.module.css
+++ b/cafe-sync/src/fran/pages/complain/styles/Complain.module.css
@@ -55,10 +55,14 @@
 }
 
 .addTextarea {
+    min-height: 370px;
     max-height: 370px;
+    margin-top: 10px;
     overflow-y: auto;
     font-size: 13px;
     padding: 20px;
+    width: 100%;
+    resize: none;
 }
 
 .btnSection {
