--- a/cafe-sync/src/fran/pages/barista-note/Note.module.css
+++ b/cafe-sync/src/fran/pages/barista-note/Note.module.css
@@ -85,6 +85,7 @@
   margin-right: 15px;
   visibility: hidden;
   /* 요소는 보이지 않지만 공간을 유지 */
+}
 
 /*------------------------------------------------------------*/
 
@@ -431,12 +432,15 @@ hr {
   align-items: center;
   justify-content: center;
 
-  width: 35px; /* 버튼 크기 조정 */
-  height: 35px; /* 버튼 크기 조정 */
+  width: 35px;
+  /* 버튼 크기 조정 */
+  height: 35px;
+  /* 버튼 크기 조정 */
   border-radius: 5px;
   border: 1px solid #ddd;
   background-color: #fff;
-  font-size: 16px; /* 글자 크기 조정 */
+  font-size: 16px;
+  /* 글자 크기 조정 */
 
   font-weight: bold;
   color: #333;
@@ -461,8 +465,10 @@ hr {
 .pagination .previous,
 .pagination .next {
 
-  width: 60px; /* 버튼 크기 동일하게 조정 */
-  height: 35px; /* 버튼 크기 동일하게 조정 */
+  width: 60px;
+  /* 버튼 크기 동일하게 조정 */
+  height: 35px;
+  /* 버튼 크기 동일하게 조정 */
   background-color: #f5f5f5;
   color: #333;
   font-weight: bold;
@@ -473,7 +479,8 @@ hr {
   align-items: center;
   justify-content: center;
 
-  font-size: 16px; /* 글자 크기 조정 */
+  font-size: 16px;
+  /* 글자 크기 조정 */
 
 }
 
@@ -493,8 +500,10 @@ hr {
 .closeButtonContainer {
   display: flex;
 
-  justify-content: flex-end; /* 왼쪽 정렬 */
-  width: 100%; /* 전체 너비 사용 */
+  justify-content: flex-end;
+  /* 왼쪽 정렬 */
+  width: 100%;
+  /* 전체 너비 사용 */
 
 }
 
@@ -502,8 +511,8 @@ hr {
   cursor: pointer;
   font-weight: bold;
 
-  color: #333; /* x 버튼 색상 */
+  color: #333;
+  /* x 버튼 색상 */
   background: none;
   border: none;
 }
-
