--- a/cafe-sync/src/fran/pages/complain/styles/Complain.module.css
+++ b/cafe-sync/src/fran/pages/complain/styles/Complain.module.css
@@ -55,8 +55,8 @@
 }
 
 .addTextarea {
-    min-height: 370px;
-    max-height: 370px;
+    min-height: 352px;
+    max-height: 352px;
     margin-top: 10px;
     overflow-y: auto;
     font-size: 13px;
@@ -184,4 +184,87 @@
 /* ✅ 마지막 행 아래쪽 테두리 제거 */
 .listTable tr:last-child td {
     border-bottom: none;
+}
+
+.pagination {
+    display: flex;
+    justify-content: center;
+    list-style: none;
+    padding: 20px 0;
+    gap: 15px;
+    margin-top: 10px;
+}
+
+.pagination li {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 35px;
+    height: 35px;
+    border-radius: 5px;
+    border: 1px solid #ddd;
+    background-color: #fff;
+    font-size: 16px;
+    font-weight: bold;
+    color: #333;
+    cursor: pointer;
+    transition: all 0.2s ease-in-out;
+}
+
+.pagination li a {
+    display: block;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    line-height: 35px; /* 텍스트를 수직 중앙 정렬 */
+    text-decoration: none; /* 밑줄 제거 */
+    color: inherit;
+}
+  
+.pagination li:hover {
+    background-color: #590d34;
+    /* 마우스 올리면 색 변경 */
+    color: white;
+}
+  
+/* ✅ 현재 페이지 스타일 */
+.activePage {
+    background-color: #590d34 !important;
+    color: white !important;
+    border-color: #590d34 !important;
+}
+
+/* 현재 페이지 버튼 스타일 */
+.active {
+    opacity: 0.5;
+    color: white;
+    font-weight: bold;
+    pointer-events: none;
+    cursor: default;
+}
+  
+  
+  /* ✅ 이전/다음 버튼 스타일 */
+.pagination .previous,
+.pagination .next {
+    width: 60px;
+    height: 35px;
+    background-color: #f5f5f5;
+    color: #333;
+    font-weight: bold;
+    border-radius: 5px;
+    border: 1px solid #ddd;
+    cursor: pointer;
+}
+  
+.pagination .previous:hover,
+.pagination .next:hover {
+    background-color: #590d34;
+    color: white;
+}
+  
+/* ✅ 페이지네이션 비활성화 상태 */
+.pagination .disabled {
+    opacity: 0.5;
+    cursor: not-allowed;
 }
