--- a/cafe-sync/src/fran/pages/main/Main.module.css
+++ b/cafe-sync/src/fran/pages/main/Main.module.css
@@ -1,71 +1,30 @@
 .sec {
-    padding: 15px;
-    background-color: white;
-    box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.08),
-                0px -6px 12px rgba(0, 0, 0, 0.05), 6px 0px 12px rgba(0, 0, 0, 0.05),
-                -6px 0px 12px rgba(0, 0, 0, 0.05);
-    border-radius: 5px;
+  padding: 15px;
+  background-color: white;
+  box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.08),
+    0px -6px 12px rgba(0, 0, 0, 0.05), 6px 0px 12px rgba(0, 0, 0, 0.05),
+    -6px 0px 12px rgba(0, 0, 0, 0.05);
+  border-radius: 5px;
 }
 
 .sec a {
-    text-decoration: none;
-    color: inherit;
-    font-weight: bolder;
+  text-decoration: none;
+  color: inherit;
 }
 
 hr {
-    margin: 10px -3px;
+  margin: 10px -3px;
 }
 
 .scheduleSection {
-    overflow-y: auto;
-    overflow-x: hidden;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 :global(.fc-scrollgrid) {
-    overflow-y: auto !important;
-  }
+  overflow-y: auto !important;
+}
 
-/* --------------------------공지사항MAIN------------------------------------- */
-.noticeSection {
-    width: 100%;
-    padding: 10px;
-  }
-  
-  .noticeList {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-  }
-  
-  .noticeItem {
-    padding: 10px;
-    background-color: #f4f4f4;
-    border-radius: 5px;
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .noticeItem a {
-    text-decoration: none;
-    color: #333;
-  }
-  
-  .noticeTitle {
-    font-size: 16px;
-    font-weight: bold;
-  }
-  
-  .noticeDate {
-    font-size: 14px;
-    color: #888;
-    margin-top: 5px;
-    height:30px;
-  }
-  
-  .noData {
-    text-align: center;
-    color: #888;
-  }
-
-  /* ---------------------------공지사항MAIN----------------------------------- */
+.title {
+  font-weight: bold;
+}
