--- a/cafe-sync/src/hq/pages/main/HQMain.module.css
+++ b/cafe-sync/src/hq/pages/main/HQMain.module.css
@@ -1,22 +1,21 @@
 .sec {
-    padding: 15px;
-    background-color: white;
-    box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.08),
-                0px -6px 12px rgba(0, 0, 0, 0.05), 6px 0px 12px rgba(0, 0, 0, 0.05),
-                -6px 0px 12px rgba(0, 0, 0, 0.05);
-    border-radius: 5px;
+  padding: 15px;
+  background-color: white;
+  box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.08),
+    0px -6px 12px rgba(0, 0, 0, 0.05), 6px 0px 12px rgba(0, 0, 0, 0.05),
+    -6px 0px 12px rgba(0, 0, 0, 0.05);
+  border-radius: 5px;
 }
 
 .sec a {
-    text-decoration: none;
-    color: inherit;
-    font-weight: bolder;
+  text-decoration: none;
+  color: inherit;
 }
 
 hr {
-    margin: 10px -3px;
+  margin: 10px -3px;
 }
 
-/* .statsSection {
-    grid-column: 1 / span 2 !important;
-} */
+.title {
+  font-weight: bold;
+}
