[25.03.07] 일정 관리 조회 로직

--- a/cafe-sync/src/fran/pages/employee/styles/FullCalendar.module.css
+++ b/cafe-sync/src/fran/pages/employee/styles/FullCalendar.module.css
@@ -18,7 +18,7 @@
     height: 108px !important;
 } 
 
-:global(.fc-dayGridMonth-view .fc-daygrid-event-harness) { width: 100px; }
+/* :global(.fc-dayGridMonth-view .fc-daygrid-event-harness) { width: 100px; } */
 
 :global(.fc-dayGridMonth-view .fc-daygrid-day-events) { 
     display: flex;
