--- a/cafe-sync/src/fran/components/common.css
+++ b/cafe-sync/src/fran/components/common.css
@@ -20,10 +20,12 @@
 }
 
 .fran-name {
-  flex: 1;
   text-align: center;
   font-size: 18px;
   font-weight: bold;
+  width: 300px;
+  position: absolute;
+  left: 44%;
 }
 
 .logout-btn {
@@ -180,3 +182,21 @@
 .page-header h3 {
   padding: 8px;
 }
+
+.extend-btn {
+  background-color: #ffffff;
+  color: #590d34;             
+  border: 1px solid #590d34;
+  padding: 5px 15px;
+  border-radius: 4px;
+  font-size: 15px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  margin-right: 10px;
+}
+
+.extend-btn:hover {
+  background-color: #590d34;
+  color: white;
+}
+
