--- a/cafe-sync/src/fran/pages/slip/Duty.module.css
+++ b/cafe-sync/src/fran/pages/slip/Duty.module.css
@@ -92,6 +92,10 @@
   background: #fff;
 }
 
+.tableStyle th {
+  background-color: #6541f3;
+}
+
 .tableStyle th,
 .tableStyle td {
   border: 1px solid #ddd;
